# synaptics-sphinx-theme

./: Dockerfile  MANIFEST.in  README.md  build.sh  pyproject.toml  synaptics_sphinx_theme.py  theme.toml
.github/workflows/: build.yml
scripts/: entrypoint.sh
static/css/: synaptics.css
synaptics_sphinx_theme/: __init__.py
