[build-system]
requires = ["setuptools>=68.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "synaptics_sphinx_theme"
version = "0.0.1.dev0"
description = "The Sphinx theme for Synaptics documentation."

dependencies = [
    "myst-parser==4.0.1",
    "sphinx_rtd_theme==2.0.0",
    "sphinxcontrib-plantuml==0.30",
    "breathe==4.35.0",
    "sphinx-copybutton==0.5.2"
]

classifiers = [
     "Private :: Do Not Upload"
]

[project.entry-points."sphinx.html_themes"]
name_of_theme = "synaptics_sphinx_theme"

[tool.setuptools]
packages = ["synaptics_sphinx_theme"]
include-package-data = true

[tool.setuptools.package-data]
synaptics_sphinx_theme = [ 
    "static/js/*.js",
    "static/css/*.css",
    "theme.toml"
]
